# kvswitch

./: .dockerignore  .gitignore  .gitmodules  README.md  pyproject.toml
docker/: Dockerfile.mininet  entrypoint.sh
exp/: run_eval.py  run_eval.sh  run_exp.sh  run_mininet.py  run_mininet.sh
kvswitch/controller/: __init__.py  finsy_adapter.py  sdn_controller.py  switch_adapter.py  tcam_manager.py
kvswitch/eval/: metrics.py  workload.py
kvswitch/mock/: worker.py
kvswitch/network/: bmv2.py  control_plane.py  topology.py
kvswitch/network/cli/: __init__.py  healthcheck.py  measure_client.py  udp_relay.py  workload_client.py
kvswitch/router/: l7_proxy.py  l7_router.py
kvswitch/sdk/: __init__.py  client.py  hashing.py  header.py  server.py
kvswitch/utils/: logger.py  prefix.py  udp.py
kvswitch/vllm/: client.py  profiling.py  server.py
notebooks/: background_motivation.ipynb  dataset_exploration.ipynb  result_analysis.ipynb
p4/: kvswitch.p4
p4/includes/: headers.p4  parser.p4
scripts/: compile_p4.sh  format.sh  install.sh  install_vllm.sh
tests/: test_controller.py  test_eval_metrics.py  test_eval_workload.py  test_finsy_adapter.py  test_l7_proxy.py  test_l7_router.py  test_logger.py  test_mock_worker.py  test_network_cli.py  test_profiling.py  test_sdk.py  test_topology.py  test_udp.py  test_workload.py
